2007-09-24  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/faq/getting.xml:
	  Add Q+A about different GStreamer versions (#364056).

2007-09-24  Wim Taymans  <wim.taymans@gmail.com>

	* libs/gst/base/gstbasesink.c: (gst_base_sink_query_latency),
	(gst_base_sink_event), (gst_base_sink_change_state):
	Return correct gboolean from query function.

2007-09-24  Wim Taymans  <wim.taymans@gmail.com>

	* libs/gst/base/gstbasesink.c: (gst_base_sink_query_latency),
	(gst_base_sink_event), (gst_base_sink_query),
	(gst_base_sink_change_state):
	Simplify latency query.
	When not synchronizing, we can report latency without querying the peer
	element.

2007-09-24  Wim Taymans  <wim.taymans@gmail.com>

	* gst/gstobject.h:
	* gst/gstvalue.c:
	Fix small typos in the docs.

2007-09-24  Wim Taymans  <wim.taymans@gmail.com>

	* docs/design/draft-latency.txt:
	* docs/design/draft-push-pull.txt:
	* docs/design/draft-tagreading.txt:
	* docs/design/part-MT-refcounting.txt:
	* docs/design/part-activation.txt:
	* docs/design/part-block.txt:
	* docs/design/part-element-source.txt:
	* docs/design/part-events.txt:
	* docs/design/part-gstbin.txt:
	* docs/design/part-gstelement.txt:
	* docs/design/part-gstobject.txt:
	* docs/design/part-gstpipeline.txt:
	* docs/design/part-messages.txt:
	* docs/design/part-preroll.txt:
	* docs/design/part-push-pull.txt:
	* docs/design/part-qos.txt:
	* docs/design/part-query.txt:
	* docs/design/part-scheduling.txt:
	* docs/design/part-seeking.txt:
	* docs/design/part-segments.txt:
	* docs/design/part-states.txt:
	Documentation updates and typo fixes.

2007-09-23  Tim-Philipp Müller  <tim at centricular dot net>

	* plugins/elements/gstfakesink.c:
	  Add some debug text to error message to indicate that
	  we errored out on request.

	* tools/gst-launch.c:
	  When the state change to PLAYING fails, check for an
	  error message on the bus and print it.

2007-09-22  Thomas Vander Stichele  <thomas at apestaart dot org>
